[package]
name = "im"
version = "13.0.0"
authors = ["Bodil Stokke <bodil@bodil.org>"]
edition = "2018"
license = "MPL-2.0+"
description = "Immutable collection datatypes"
repository = "https://github.com/bodil/im-rs"
documentation = "http://immutable.rs/"
homepage = "http://immutable.rs/"
readme = "./README.md"
categories = ["data-structures"]
keywords = ["immutable", "persistent", "hamt", "b-tree", "rrb-tree"]
build = "./build.rs"
exclude = ["dist/**", "rc/**", "release.toml", "Makefile.toml", "proptest-regressions/**"]

[lib]
path = "./src/lib.rs"

[badges]
circle-ci = { repository = "bodil/im-rs" }

[build-dependencies]
version_check = "0.9"

[dependencies]
typenum = "1.10"
bitmaps = "2.0.0"
sized-chunks = { version = "*" }
quickcheck = { version = "0.9", optional = true }
proptest = { version = "0.9", optional = true }
serde = { version = "1.0", optional = true }
rayon = { version = "1.0", optional = true }
rand = { version = "0.7", features = ["small_rng"] }

[dev-dependencies]
proptest = "0.9"
serde = "1.0"
serde_json = "1.0"
rayon = "1.0"
pretty_assertions = "0.6"
metrohash = "1.0.6"
proptest-derive = "0.1.0"
syntect = "3.1.0"
