[package]
name = "im"
version = "14.3.0"
authors = ["Bodil Stokke <bodil@bodil.org>"]
edition = "2018"
license = "MPL-2.0+"
description = "Immutable collection datatypes"
repository = "https://github.com/bodil/im-rs"
documentation = "http://immutable.rs/"
homepage = "http://immutable.rs/"
readme = "./README.md"
categories = ["data-structures"]
keywords = ["immutable", "persistent", "hamt", "b-tree", "rrb-tree"]
build = "./build.rs"
exclude = [
    "dist/**",
    "rc/**",
    "release.toml",
    "Makefile.toml",
    "proptest-regressions/**"
]

[package.metadata.docs.rs]
all-features = true

[lib]
path = "./src/lib.rs"

[badges]
travis-ci = { repository = "bodil/im-rs" }

[build-dependencies]
version_check = "0.9"

[features]
debug = []

[dependencies]
typenum = "1.11"
bitmaps = "2"
sized-chunks = "0.6"
rand_core = "0.5.1"
rand_xoshiro = "0.4"
quickcheck = { version = "0.9", optional = true }
proptest = { version = "0.9", optional = true }
serde = { version = "1", optional = true }
rayon = { version = "1", optional = true }
refpool = { version = "0.3", optional = true }
arbitrary = { version = "0.4", optional = true }

[dev-dependencies]
proptest = "0.9"
serde = "1"
serde_json = "1"
rayon = "1"
rand = { version = "0.7", features = ["small_rng"] }
pretty_assertions = "0.6"
metrohash = "1"
proptest-derive = "0.1"
