[package]
name = "im-rc"
version = "11.0.1"
authors = ["Bodil Stokke <bodil@bodil.org>"]
license = "MPL-2.0+"
description = "Immutable collection datatypes (the fast but not thread safe version)"
repository = "https://github.com/bodil/im-rs"
documentation = "http://immutable.rs/"
homepage = "http://immutable.rs/"
readme = "../README.md"
categories = ["data-structures"]
keywords = ["immutable", "persistent", "hamt", "b-tree", "rrb-tree"]
build = "../build.rs"

[lib]
path = "../src/lib.rs"

[badges]
travis-ci = { repository = "bodil/im-rs" }

[build-dependencies]
rustc_version = "0.2"
regex = "1.0"
walkdir = "2.2"

[dependencies]
quickcheck = { version = "0.6", optional = true }
proptest = { version = "0.8", optional = true }
serde = { version = "1.0", optional = true }

[dev-dependencies]
quickcheck = "0.6"
proptest = "0.8"
serde = "1.0"
serde_json = "1.0"
rand = "0.5"
pretty_assertions = "0.5"
