[package]
name = "im-rc"
version = "13.0.0"
edition = "2018"
authors = ["Bodil Stokke <bodil@bodil.org>"]
license = "MPL-2.0+"
description = "Immutable collection datatypes (the fast but not thread safe version)"
repository = "https://github.com/bodil/im-rs"
documentation = "http://immutable.rs/"
homepage = "http://immutable.rs/"
readme = "../README.md"
categories = ["data-structures"]
keywords = ["immutable", "persistent", "hamt", "b-tree", "rrb-tree"]
build = "../build.rs"

[lib]
path = "../src/lib.rs"

[badges]
travis-ci = { repository = "bodil/im-rs" }

[build-dependencies]
version_check = "0.9"

[dependencies]
typenum = "1.10"
bitmaps = "2.0.0"
sized-chunks = { version = "*" }
quickcheck = { version = "0.9", optional = true }
proptest = { version = "0.9", optional = true }
serde = { version = "1.0", optional = true }
rayon = { version = "1.0", optional = true }
rand_core = "0.5.1"
rand_xoshiro = "0.4.0"

[dev-dependencies]
proptest = "0.9"
serde = "1.0"
serde_json = "1.0"
rayon = "1.0"
rand = { version = "0.7", features = ["small_rng"] }
pretty_assertions = "0.6"
metrohash = "1.0.6"
proptest-derive = "0.1.0"
